fixed centering of scrambled text on mobiles

--- a/src/app/components/WelcomePage/Blocks/MainScreen/MainScreen.css
+++ b/src/app/components/WelcomePage/Blocks/MainScreen/MainScreen.css
@@ -13,6 +13,7 @@
     font-weight: 100;
     font-size: 28px;
     color: #fafafa;
+    text-align: center;
 }
 .MainScreen .dud {
   color: #757575;
